--- a/css/index.css
+++ b/css/index.css
@@ -1574,7 +1574,7 @@ select::-ms-expand {
     margin-bottom: 10px;
 }
 
-.info_personal_detail > ul li:nth-child(5) {
+.info_personal_detail > ul li:nth-child(6) {
     margin-bottom: 0px;
 }
 
@@ -1626,25 +1626,13 @@ select::-ms-expand {
     }
 
     .info_personal_detail > ul li {
-        width: calc(50% - 20px);
+        width: 100%;
+        text-align: center;
         float: left;
+        list-style: none;
         margin-bottom: 15px;
-    }
-
-
-    .info_personal_detail > ul li:nth-child(1),
-    .info_personal_detail > ul li:nth-child(3) {
-        margin-right: 20px;
-    }
-
-    .info_personal_detail > ul li:nth-child(2),
-    .info_personal_detail > ul li:nth-child(4) {
-        margin-left: 20px;
-    }
-
-    .info_personal_detail > ul li:nth-child(3),
-    .info_personal_detail > ul li:nth-child(4) {
-        margin-bottom: 0px;
+        margin-right: 0px;
+        margin-left: 0px;
     }
 }
 
