--- a/css/report.css
+++ b/css/report.css
@@ -398,6 +398,16 @@ select::-ms-expand {
     font-size: 20px;
 }
 
+.page_footer_left_part {
+    font-size: 18px;
+    display: flex;
+}
+
+.page_footer_left_part img {
+    height: 28px;
+    margin-right: 8px;
+}
+
 .page_container {
     width: 100%;
 
@@ -942,4 +952,219 @@ select::-ms-expand {
 /*選單end*/
 .display_none_all {
     display: none !important;
+}
+
+@-webkit-keyframes shake_item {
+
+    0%,
+    100% {
+        -webkit-transform: translateX(0);
+        opacity: 1;
+    }
+
+    10%,
+    30%,
+    50%,
+    70%,
+    90% {
+        -webkit-transform: translateX(-5px);
+    }
+
+    20%,
+    40%,
+    60%,
+    80% {
+        -webkit-transform: translateX(5px);
+    }
+}
+
+@-moz-keyframes shake_item {
+
+    0%,
+    100% {
+        -moz-transform: translateX(0);
+        opacity: 1;
+    }
+
+    10%,
+    30%,
+    50%,
+    70%,
+    90% {
+        -moz-transform: translateX(-5px);
+    }
+
+    20%,
+    40%,
+    60%,
+    80% {
+        -moz-transform: translateX(5px);
+    }
+}
+
+@-o-keyframes shake_item {
+
+    0%,
+    100% {
+        -o-transform: translateX(0);
+        opacity: 1;
+    }
+
+    10%,
+    30%,
+    50%,
+    70%,
+    90% {
+        -o-transform: translateX(-5px);
+    }
+
+    20%,
+    40%,
+    60%,
+    80% {
+        -o-transform: translateX(5px);
+    }
+}
+
+@keyframes shake_item {
+
+    0%,
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+
+    10%,
+    30%,
+    50%,
+    70%,
+    90% {
+        transform: translateX(-5px);
+    }
+
+    20%,
+    40%,
+    60%,
+    80% {
+        transform: translateX(5px);
+    }
+}
+
+.shake_item {
+    -webkit-animation-name: shake_item;
+    -moz-animation-name: shake_item;
+    -o-animation-name: shake_item;
+    animation-name: shake_item;
+    animation-delay: 2s;
+    animation-iteration-count: 2;
+}
+
+@-webkit-keyframes shake_item {
+
+    0%,
+    100% {
+        -webkit-transform: translateX(0);
+        opacity: 1;
+    }
+
+    10%,
+    30%,
+    50%,
+    70%,
+    90% {
+        -webkit-transform: translateX(-5px);
+    }
+
+    20%,
+    40%,
+    60%,
+    80% {
+        -webkit-transform: translateX(5px);
+    }
+}
+
+@-moz-keyframes shake_item {
+
+    0%,
+    100% {
+        -moz-transform: translateX(0);
+        opacity: 1;
+    }
+
+    10%,
+    30%,
+    50%,
+    70%,
+    90% {
+        -moz-transform: translateX(-5px);
+    }
+
+    20%,
+    40%,
+    60%,
+    80% {
+        -moz-transform: translateX(5px);
+    }
+}
+
+.desktop_none_tip {
+    display: none;
+}
+
+@media (max-width:1240px) {
+    .desktop_version {
+        display: none;
+    }
+
+    .desktop_none_tip {
+        width: 100%;
+        height: 100vh;
+        font-weight: bold;
+        color: #232323;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .desktop_none_tip .title {
+        font-size: 22px;
+        margin-bottom: 20px;
+    }
+
+    .desktop_none_tip .text {
+        font-size: 20px;
+    }
+
+    .desktop_none_tip .note {
+        font-size: 18px;
+        font-weight: normal;
+    }
+
+    .desktop_none_tip .line_btn {
+        width: 250px;
+        margin: 0 auto;
+        margin-top: 10px;
+    }
+}
+
+@media (max-width:420px) {
+    .desktop_none_tip .title {
+        font-size: 20px;
+    }
+
+    .desktop_none_tip .text {
+        font-size: 18px;
+    }
+
+    .desktop_none_tip .note {
+        font-size: 16px;
+        font-weight: normal;
+    }
+
+    .desktop_none_tip .line_btn {
+        width:220px;
+        height:42px;
+        font-size: 16px;
+    }
 }
